--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ keywords = ["str-random", "random", "rand", "rand-lines"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rand = "0.8.5"
